--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -127,7 +127,7 @@
     when: not ansible_check_mode
     become: true
     tags: victoriametrics
-  when: (not __victoriametrics_is_installed.stat.exists) or (__victoriametrics_current_version_output.stderr_lines[0].split(" ")[2] != victoriametrics_version)
+  when: (not __victoriametrics_is_installed.stat.exists) or (__victoriametrics_current_version_output.stderr_lines[0].split("-")[5]|regex_search('[0-9.]+') != victoriametrics_version)
 
 - block:
   - name: create config directory
@@ -150,7 +150,7 @@
     notify: restart victoriametrics
     become: true
     tags: victoriametrics
-  when: victoriametrics_prometheus_config length > 0
+  when: victoriametrics_prometheus_config | length > 0
 
 - name: create systemd service unit
   template:
