--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -74,6 +74,16 @@
   become: true
   tags: victoriametrics
 
+- name: set fact for version split
+  set_fact:
+    victoriametrics_version2: "{{ __victoriametrics_current_version_output.stdout_lines[0].split('-')[5]|regex_search('[0-9.]+') }}"
+  tags: victoriametrics
+
+- name: defined version
+  tags: victoriametrics
+  debug:
+    msg: "{{ victoriametrics_version2 }}"
+
 - block:
   - name: get checksum list from github
     set_fact:
@@ -127,7 +137,7 @@
     when: not ansible_check_mode
     become: true
     tags: victoriametrics
-  when: (not __victoriametrics_is_installed.stat.exists) or (__victoriametrics_current_version_output.stderr_lines[0].split("-")[5]|regex_search('[0-9.]+') != victoriametrics_version)
+  when: (not __victoriametrics_is_installed.stat.exists) or (__victoriametrics_current_version_output.stdout_lines[0].split("-")[5]|regex_search('[0-9.]+') != victoriametrics_version)
 
 - block:
   - name: create config directory
