updates and remove selinux, firewall, bindcap support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ victoriametrics_data_dir: /var/lib/victoriametrics
 victoriametrics_config_dir: /etc/victoriametrics
 victoriametrics_log_level: warn
 victoriametrics_log_format: json
-victoriametrics_allow_firewall: false
 victoriametrics_prometheus_config: {}
+victoriametrics_limit_nofile: 16384
 victoriametrics_config:
   storageDataPath: "{{ victoriametrics_data_dir }}"
