--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,14 +29,14 @@
   become: true
   tags: victoriametrics
 
-- name: check if victoriametrics is installed
+- name: check if is installed
   stat:
     path: "/usr/local/bin/victoriametrics"
   register: __victoriametrics_is_installed
   become: true
   tags: victoriametrics
 
-- name: gather currently installed victoriametrics version (if any)
+- name: gather currently installed version (if any)
   command: "/usr/local/bin/victoriametrics -version"
   args:
     warn: false
@@ -150,7 +150,7 @@
     become: true
     tags: victoriametrics
 
-  - name: create prometheus config file
+  - name: create config file
     template:
       src: victoriametrics.config.json.j2
       dest: "{{ victoriametrics_config_dir }}/config.yml"
@@ -170,94 +170,6 @@
     group: root
     mode: 0644
   notify: restart victoriametrics
-  become: true
-  tags: victoriametrics
-
-- name: enable capabilities to ports lower than port 1024
-  capabilities:
-    path: "{{ victoriametrics_binary_install_dir }}/victoriametrics"
-    capability: CAP_NET_BIND_SERVICE+ep
-    state: present
-  when: victoriametrics_web_listen_port <= 1024
-  tags: victoriametrics
-
-- name: install selinux dependencies
-  package:
-    name: "{{ item }}"
-    state: present
-  environment: "{{ proxy_env }}"
-  with_items: "{{ victoriametrics_selinux_packages }}"
-  register: _install_packages
-  until: _install_packages is succeeded
-  retries: 5
-  delay: 2
-  when:
-    - ansible_version.full is version_compare('2.4', '>=')
-    - ansible_selinux.status == "enabled"
-  become: true
-  tags: victoriametrics
-
-- name: allow binding to port in selinux
-  seport:
-    ports: "{{ victoriametrics_web_listen_port }}"
-    proto: tcp
-    setype: http_port_t
-    state: present
-  when:
-    - ansible_version.full is version_compare('2.4', '>=')
-    - ansible_selinux.status == "enabled"
-  become: true
-  tags: victoriametrics
-
-- name: check whether ufw status is active
-  command: "ufw status"
-  changed_when: False
-  ignore_errors: True
-  register: _ufw_status
-  become: true
-  when:
-    - victoriametrics_allow_firewall
-    - ansible_os_family == 'Debian'
-  tags: victoriametrics
-
-- name: check whether firewalld status is active
-  command: "firewall-cmd --state"
-  changed_when: False
-  ignore_errors: True
-  register: _firewalld_status
-  become: true
-  when: ansible_os_family == 'RedHat'
-  tags: victoriametrics
-
-- name: configure ufw
-  community.general.ufw:
-    rule: allow
-    port: "{{ victoriametrics_web_listen_port }}"
-    proto: tcp
-    state: enabled
-    comment: "Node Exporter"
-  changed_when: False
-  ignore_errors: True
-  notify: reload ufw
-  become: true
-  tags: victoriametrics
-  when:
-    - "'active' in _ufw_status.stdout"
-    - ansible_os_family == 'Debian'
-    - victoriametrics_allow_firewall
-
-- name: configure firewalld
-  firewalld:
-    port: "{{ victoriametrics_web_listen_port }}/tcp"
-    permanent: yes
-    state: true
-  changed_when: False
-  ignore_errors: True
-  when:
-    - "'running' in _firewalld_status.stdout"
-    - victoriametrics_allow_firewall
-    - ansible_os_family == 'RedHat'
-  notify: reload firewalld
   become: true
   tags: victoriametrics
 
