--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -78,11 +78,13 @@
   set_fact:
     victoriametrics_version2: "{{ __victoriametrics_current_version_output.stdout_lines[0].split('-')[5]|regex_search('[0-9.]+') }}"
   tags: victoriametrics
+  when: __victoriametrics_current_version_output.stdout_lines is defined
 
 - name: defined version
   tags: victoriametrics
   debug:
     msg: "{{ victoriametrics_version2 }}"
+  when: __victoriametrics_current_version_output.stdout_lines is defined
 
 - block:
   - name: get checksum list from github
@@ -97,7 +99,7 @@
     set_fact:
       victoriametrics_checksum: "{{ item.split(' ')[0] }}"
     with_items: "{{ _checksums }}"
-    when: "('victoria-metrics-v' + victoriametrics_version + '.tar.gz') in item"
+    when: "('victoria-metrics-' + go_arch + '-v' + victoriametrics_version + '.tar.gz') in item"
     become: true
     tags: victoriametrics
 
@@ -113,7 +115,7 @@
     delay: 2
     delegate_to: localhost
     check_mode: false
-    become: true
+    become: false
     tags: victoriametrics
 
   - name: unpack binary
@@ -123,7 +125,7 @@
       creates: "/tmp/victoriametrics-{{ victoriametrics_version }}.linux-{{ go_arch }}/victoriametrics"
     delegate_to: localhost
     check_mode: false
-    become: true
+    become: false
     tags: victoriametrics
 
   - name: propagate binaries
